Criação da página principal

--- a/soldajustica/app/templates/app/index.html
+++ b/soldajustica/app/templates/app/index.html
@@ -2,31 +2,85 @@
 
 {% block content %}
 
-<div class="jumbotron">
-    <h1>Django</h1>
-    <p class="lead">Django is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
-    <p><a href="https://www.djangoproject.com/" class="btn btn-primary btn-large">Learn more &raquo;</a></p>
+<div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+    <ol class="carousel-indicators">
+        <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
+        <li data-target="#carousel-example-generic" data-slide-to="1"></li>
+        <li data-target="#carousel-example-generic" data-slide-to="2"></li>
+    </ol>
+
+    <div class="carousel-inner" role="listbox">
+        <div class="item active">
+            <img src="http://placehold.it/1200x500" alt="lorem ipsum">
+            <div class="carousel-caption">
+                lorem ipsum
+            </div>
+        </div>
+        <div class="item">
+            <img src="http://placehold.it/1200x500" alt="lorem ipsum">
+            <div class="carousel-caption">
+                lorem ipsum
+            </div>
+        </div>
+        <div class="item">
+            <img src="http://placehold.it/1200x500" alt="lorem ipsum">
+            <div class="carousel-caption">
+                lorem ipsum
+            </div>
+        </div>
+    </div>
+
+    <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
+        <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+        <span class="sr-only">Anterior</span>
+    </a>
+    <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
+        <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+        <span class="sr-only">Próximo</span>
+    </a>
 </div>
 
 <div class="row">
-    <div class="col-md-4">
-        <h2>Getting started</h2>
+    <div class="col-xs-6 col-md-3">
+        <h2>Sobre</h2>
+        <a class="btn btn-default" href="#">
+            Saiba mais
+        </a>
+    </div>
+    <div class="col-xs-6 col-md-3">
+        <h2>Projetos</h2>
+        <a class="btn btn-default" href="#">
+            Saiba mais
+        </a>
+    </div>
+    <div class="col-xs-6 col-md-3">
+        <h2>Doe</h2>
+        <a class="btn btn-default" href="#">
+            Saiba mais
+        </a>
+    </div>
+    <div class="col-xs-6 col-md-3">
+        <h2>Envolva-se</h2>
+        <a class="btn btn-default" href="#">
+            Saiba mais
+        </a>
+    </div>
+</div>
+
+<div class="row">
+    <div class="col-xs-12">
+        <h3>Seja um gerador de almas</h3>
+        <strong>Como ajudar</strong>
+        <p>seja um padrinho de almas, abraçando um novo convertido.
+    Acolha um iniciado na obra o ajudando em suas dificuldades com a palavra, compreendendo suas dificuldades pessoais e fazendo esta gestão juntamente com o ministerio da igreja.</p>
+        <strong>Como ajudar</strong>
+        <p>todo o gerador de almas merece ser reconhecido, e esta pessoa será reconhecida diante de todos. mensalmente faremos uma comemoração para celebração dos novos nascidos em cristo.</p>
+        <strong>Cultos publicos</strong>
         <p>
-            Django gives you a powerful, patterns-based way to build dynamic websites that
-            enables a clean separation of concerns and gives you full control over markup
-            for enjoyable, agile development.
+            Quarta-Feira :  Culto de Doutrina com estudos da palavra<br />
+            Sexta-Feira : Culto de libertação<br />
+            Domingo: Escola dominical pela manhã e grande culto publico anoite.
         </p>
-        <p><a class="btn btn-default" href="http://www.djangobook.com/en/2.0/index.html">Learn more &raquo;</a></p>
-    </div>
-    <div class="col-md-4">
-        <h2>Get more libraries</h2>
-        <p>The Python Package Index is a repository of software for the Python programming language.</p>
-        <p><a class="btn btn-default" href="https://pypi.python.org/pypi">Learn more &raquo;</a></p>
-    </div>
-    <div class="col-md-4">
-        <h2>Microsoft Azure</h2>
-        <p>You can easily publish to Microsoft Azure using Python Tools for Visual Studio. Find out how you can host your application using a free trial today.</p>
-        <p><a class="btn btn-default" href="http://azure.microsoft.com">Learn more &raquo;</a></p>
     </div>
 </div>
 
