--- a/soldajustica/app/templates/app/layout.html
+++ b/soldajustica/app/templates/app/layout.html
@@ -11,31 +11,46 @@
 </head>
 
 <body>
-    <div class="navbar navbar-inverse navbar-fixed-top">
-        <div class="container">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                <a href="/" class="navbar-brand">Sol da justiça</a>
+    <div class="container">
+        <header class="row-fluid">
+            <h1 class="hidden-xs">Igreja assembleia de Deus Sol da Justiça</h1>
+            <div class="navbar navbar-default">
+                <div class="container">
+                    <div class="navbar-header">
+                        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+                            <span class="icon-bar"></span>
+                            <span class="icon-bar"></span>
+                            <span class="icon-bar"></span>
+                        </button>
+                        <a href="{% url 'home' %}" class="navbar-brand visible-xs">Sol da justiça</a>
+                    </div>
+                    <div class="navbar-collapse collapse">
+                        <ul class="nav navbar-nav">
+                            <li><a href="{% url 'home' %}">Início</a></li>
+                            <li><a href="{% url 'about' %}">Sobre nós</a></li>
+                            <li><a href="#">Projetos</a></li>
+                            <li><a href="#">Envolva-se</a></li>
+                            <li><a href="#">Doe</a></li>
+                            <li><a href="#">Ministérios</a></li>
+                            <li><a href="#">Jornal do cristão</a></li>
+                        </ul>
+                    </div>
+                </div>
             </div>
-            <div class="navbar-collapse collapse">
-                <ul class="nav navbar-nav">
-                    <li><a href="{% url 'home' %}">Home</a></li>
-                    <li><a href="{% url 'about' %}">About</a></li>
-                    <li><a href="{% url 'contact' %}">Contact</a></li>
-                </ul>
-            </div>
-        </div>
-    </div>
-
-    <div class="container body-content">
-{% block content %}{% endblock %}
-        <hr/>
+        </header>
+        <main>
+            {% block content %}{% endblock %}
+        </main>
         <footer>
-            <p>&copy; {{ year }} - My Django Application</p>
+            <address>
+                <strong>Telefone de contato:</strong></br />
+                <a href="tel:+55212551212">+55 21 24573052</a>
+            </address>
+            <address>
+                <strong>Encontre-nos: </strong><br />
+                Rua Joaquim de Queiroz 266 - Ramos </br />
+                Rio de Janeiro - RJ
+            </address>
         </footer>
     </div>
 
