--- a/soldajustica/app/templates/app/index.html
+++ b/soldajustica/app/templates/app/index.html
@@ -40,28 +40,32 @@
     </a>
 </div>
 
-<div class="row">
-    <div class="col-xs-6 col-md-3">
+<div class="main-link-list">
+    <div class="main-link">
+        <span class="glyphicon glyphicon-info-sign" aria-hidden="true"></span>
         <h2>Sobre</h2>
-        <a class="btn btn-default" href="#">
+        <a href="#">
             Saiba mais
         </a>
     </div>
-    <div class="col-xs-6 col-md-3">
+    <div class="main-link">
+        <span class="glyphicon glyphicon-ok-sign" aria-hidden="true"></span>
         <h2>Projetos</h2>
-        <a class="btn btn-default" href="#">
+        <a href="#">
             Saiba mais
         </a>
     </div>
-    <div class="col-xs-6 col-md-3">
+    <div class="main-link">
+        <span class="glyphicon glyphicon-star" aria-hidden="true"></span>
         <h2>Doe</h2>
-        <a class="btn btn-default" href="#">
+        <a href="#">
             Saiba mais
         </a>
     </div>
-    <div class="col-xs-6 col-md-3">
+    <div class="main-link">
+        <span class="glyphicon glyphicon-plus-sign" aria-hidden="true"></span>
         <h2>Envolva-se</h2>
-        <a class="btn btn-default" href="#">
+        <a href="#">
             Saiba mais
         </a>
     </div>
