--- a/soldajustica/app/templates/app/index.html
+++ b/soldajustica/app/templates/app/index.html
@@ -51,7 +51,7 @@
     <div class="main-link">
         <span class="glyphicon glyphicon-ok-sign" aria-hidden="true"></span>
         <h2>Projetos</h2>
-        <a href="#">
+        <a href="{% url 'projects' %}">
             Saiba mais
         </a>
     </div>
