--- a/soldajustica/app/static/app/content/site.css
+++ b/soldajustica/app/static/app/content/site.css
@@ -132,4 +132,23 @@
 .main-link .glyphicon {
   font-size: 24pt;
 }
+.project-list-empty {
+  text-align: center;
+  font-size: 18px;
+}
+.project-item-img {
+  max-width: 160px;
+  max-height: 160px;
+}
+@media (max-width: 767px) {
+  .project-item-img {
+    margin-left: auto;
+    margin-right: auto;
+  }
+}
+@media (min-width: 768px) {
+  .project-item-img {
+    margin-top: 20%;
+  }
+}
 /*# sourceMappingURL=site.css.map */
