--- a/soldajustica/app/templates/app/layout.html
+++ b/soldajustica/app/templates/app/layout.html
@@ -1,9 +1,9 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{{ title }} - My Django Application</title>
+    <title>Sol da Justiça</title>
     {% load staticfiles %}
     <link rel="stylesheet" type="text/css" href="{% static 'app/content/bootstrap.min.css' %}" />
     <link rel="stylesheet" type="text/css" href="{% static 'app/content/site.css' %}" />
@@ -28,7 +28,7 @@
                         <ul class="nav navbar-nav">
                             <li><a href="{% url 'home' %}">Início</a></li>
                             <li><a href="{% url 'about' %}">Sobre nós</a></li>
-                            <li><a href="#">Projetos</a></li>
+                            <li><a href="{% url 'projects' %}">Projetos</a></li>
                             <li><a href="#">Envolva-se</a></li>
                             <li><a href="#">Doe</a></li>
                             <li><a href="#">Ministérios</a></li>
