--- a/soldajustica/app/templates/app/layout.html
+++ b/soldajustica/app/templates/app/layout.html
@@ -41,12 +41,12 @@
         <main>
             {% block content %}{% endblock %}
         </main>
-        <footer>
-            <address>
+        <footer class="footer">
+            <address class="address">
                 <strong>Telefone de contato:</strong></br />
                 <a href="tel:+55212551212">+55 21 24573052</a>
             </address>
-            <address>
+            <address class="address">
                 <strong>Encontre-nos: </strong><br />
                 Rua Joaquim de Queiroz 266 - Ramos </br />
                 Rio de Janeiro - RJ
