--- a/soldajustica/app/static/app/content/site.less
+++ b/soldajustica/app/static/app/content/site.less
@@ -9,6 +9,14 @@
     font-family: 'Nunito', sans-serif;
 }
 
+a {
+    color: @colDefault;
+    &:hover,
+    &:focus {
+        color: @colHighlight;
+    }
+}
+
 .navbar-default {
     border-radius: 0;
     border: none;
@@ -126,11 +134,6 @@
         border-right: none;
     }
     a {
-        color: @colDefault;
-        &:hover,
-        &:focus {
-            color: @colHighlight;
-        }
         &:after, &:before {
             content: "|";
         }
@@ -157,5 +160,16 @@
             max-width: 160px;
             max-height: 160px;
         }
+    }
+}
+
+.footer {
+    margin-top: 30px;
+    background-color: @bgDefault;
+    color: @colDefault;
+    padding: 20px;
+    .address {
+        display: inline-table;
+        margin-left: 25px;
     }
 }
