Implementação de página de envolva-se

--- a/soldajustica/app/templates/app/index.html
+++ b/soldajustica/app/templates/app/index.html
@@ -65,7 +65,7 @@
     <div class="main-link">
         <span class="glyphicon glyphicon-plus-sign" aria-hidden="true"></span>
         <h2>Envolva-se</h2>
-        <a href="#">
+        <a href="{% url 'get-involved' %}">
             Saiba mais
         </a>
     </div>
