--- a/soldajustica/app/templates/app/layout.html
+++ b/soldajustica/app/templates/app/layout.html
@@ -29,7 +29,7 @@
                             <li><a href="{% url 'home' %}">Início</a></li>
                             <li><a href="{% url 'about' %}">Sobre nós</a></li>
                             <li><a href="{% url 'projects' %}">Projetos</a></li>
-                            <li><a href="#">Envolva-se</a></li>
+                            <li><a href="{% url 'get-involved' %}">Envolva-se</a></li>
                             <li><a href="#">Doe</a></li>
                             <li><a href="#">Ministérios</a></li>
                             <li><a href="#">Jornal do cristão</a></li>
