--- a/soldajustica/app/static/app/content/site.css
+++ b/soldajustica/app/static/app/content/site.css
@@ -161,4 +161,23 @@ a:focus {
   display: inline-table;
   margin-left: 25px;
 }
+.get-involded-header {
+  text-align: center;
+  color: #ffffff;
+}
+.get-involded-item {
+  background: #f39c12;
+  padding: 20px;
+  color: #ffffff;
+  height: 570px;
+}
+.get-involded-img {
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 20px;
+  border-radius: 2px;
+}
+h1 {
+  text-align: center;
+}
 /*# sourceMappingURL=site.css.map */
