--- a/soldajustica/app/static/app/content/site.less
+++ b/soldajustica/app/static/app/content/site.less
@@ -173,3 +173,29 @@ a {
         margin-left: 25px;
     }
 }
+
+.get-involded {
+    &-list {
+
+    }
+    &-header {
+        text-align: center;
+        color: @colDefault;
+    }
+    &-item {
+        background: @bgDefault;
+        padding: 20px;
+        color: @colDefault;
+        height: 570px;
+    }
+    &-img {
+        margin-left: auto;
+        margin-right: auto;
+        margin-bottom: 20px;
+        border-radius: 2px;
+    }
+}
+
+h1 {
+    text-align: center;
+}
