--- a/soldajustica/app/templates/app/projects.html
+++ b/soldajustica/app/templates/app/projects.html
@@ -13,7 +13,7 @@
                 </div>
                 <div class="col-sm-8">
                     <h3>{{ project.name }}</h3>
-                    <p>{{ project.description }}"</p>
+                    <p>{{ project.description }}</p>
                 </div>
             </div>
         </div>
