Implementação de página de doações

--- a/soldajustica/app/static/app/content/site.css
+++ b/soldajustica/app/static/app/content/site.css
@@ -180,4 +180,13 @@ a:focus {
 h1 {
   text-align: center;
 }
+.donate-box {
+  text-align: center;
+  background: #f39c12;
+  padding-top: 10px;
+  padding-bottom: 10px;
+}
+.donate-box .glyphicon {
+  font-size: 24pt;
+}
 /*# sourceMappingURL=site.css.map */
