--- a/soldajustica/app/static/app/content/site.less
+++ b/soldajustica/app/static/app/content/site.less
@@ -199,3 +199,13 @@ a {
 h1 {
     text-align: center;
 }
+
+.donate-box {
+    text-align: center;
+    .glyphicon {
+        font-size: 24pt;
+    }
+    background: @bgDefault;
+    padding-top: 10px;
+    padding-bottom: 10px;
+}
