--- a/soldajustica/app/templates/app/index.html
+++ b/soldajustica/app/templates/app/index.html
@@ -58,7 +58,7 @@
     <div class="main-link">
         <span class="glyphicon glyphicon-star" aria-hidden="true"></span>
         <h2>Doe</h2>
-        <a href="#">
+        <a href="{% url 'donate' %}">
             Saiba mais
         </a>
     </div>
