--- a/soldajustica/app/templates/app/layout.html
+++ b/soldajustica/app/templates/app/layout.html
@@ -30,7 +30,7 @@
                             <li><a href="{% url 'about' %}">Sobre nós</a></li>
                             <li><a href="{% url 'projects' %}">Projetos</a></li>
                             <li><a href="{% url 'get-involved' %}">Envolva-se</a></li>
-                            <li><a href="#">Doe</a></li>
+                            <li><a href="{% url 'donate' %}">Doe</a></li>
                             <li><a href="#">Ministérios</a></li>
                             <li><a href="#">Jornal do cristão</a></li>
                         </ul>
