--- a/soldajustica/app/templates/app/layout.html
+++ b/soldajustica/app/templates/app/layout.html
@@ -32,7 +32,7 @@
                             <li><a href="{% url 'get-involved' %}">Envolva-se</a></li>
                             <li><a href="{% url 'donate' %}">Doe</a></li>
                             <li><a href="#">Ministérios</a></li>
-                            <li><a href="#">Jornal do cristão</a></li>
+                            <li><a href="{% url 'news_list' %}">Jornal do cristão</a></li>
                         </ul>
                     </div>
                 </div>
