--- a/soldajustica/app/static/app/content/site.css
+++ b/soldajustica/app/static/app/content/site.css
@@ -132,10 +132,6 @@ a:focus {
 .main-link .glyphicon {
   font-size: 24pt;
 }
-.project-list-empty {
-  text-align: center;
-  font-size: 18px;
-}
 .project-item-img {
   max-width: 160px;
   max-height: 160px;
@@ -182,11 +178,31 @@ h1 {
 }
 .donate-box {
   text-align: center;
+  color: #ffffff;
   background: #f39c12;
   padding-top: 10px;
   padding-bottom: 10px;
 }
 .donate-box .glyphicon {
   font-size: 24pt;
+}
+.list-empty {
+  text-align: center;
+  font-size: 18px;
+}
+.btn {
+  border-radius: 0;
+  border: none;
+}
+.btn-primary {
+  color: #ffffff;
+  background: #f39c12;
+  transition: all ease-in 0.3s;
+}
+.btn-primary:hover,
+.btn-primaryfocus {
+  color: #f1c40f;
+  background: #e67e22;
+  transition: all ease-in 0.3s;
 }
 /*# sourceMappingURL=site.css.map */
