--- a/soldajustica/app/templates/app/projects.html
+++ b/soldajustica/app/templates/app/projects.html
@@ -19,7 +19,7 @@
         </div>
         {% empty %}
         <div class="col-xs-12">
-            <p class="project-list-empty">Nenhum Projeto em andamento</p>
+            <p class="list-empty">Nenhum Projeto em andamento</p>
         </div>
         {% endfor %}
     </div>
