--- a/soldajustica/app/templates/app/index.html
+++ b/soldajustica/app/templates/app/index.html
@@ -2,32 +2,26 @@
 
 {% block content %}
 
+{% if carousel %}
 <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
     <ol class="carousel-indicators">
-        <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
-        <li data-target="#carousel-example-generic" data-slide-to="1"></li>
-        <li data-target="#carousel-example-generic" data-slide-to="2"></li>
+        {% for slide in carousel %}
+        <li data-target="#carousel-example-generic" data-slide-to="{{forloop.counter0}}" class="{% if forloop.first %}active{% endif %}"></li>
+        {% endfor %}
     </ol>
 
     <div class="carousel-inner" role="listbox">
-        <div class="item active">
-            <img src="http://placehold.it/1200x500" alt="lorem ipsum">
-            <div class="carousel-caption">
-                lorem ipsum
-            </div>
+        {% for slide in carousel %}
+        <div class="item {% if forloop.first %}active{% endif %}">
+            <a href="{{ slide.url }}">
+                <img src="{{ slide.image.url}}" alt="{{ slide.description }}">
+                <div class="carousel-caption">
+                    <h3>{{ slide.title}}</h3>
+                    <p>{{ slide.description }}</p>
+                </div>
+            </a>
         </div>
-        <div class="item">
-            <img src="http://placehold.it/1200x500" alt="lorem ipsum">
-            <div class="carousel-caption">
-                lorem ipsum
-            </div>
-        </div>
-        <div class="item">
-            <img src="http://placehold.it/1200x500" alt="lorem ipsum">
-            <div class="carousel-caption">
-                lorem ipsum
-            </div>
-        </div>
+        {% endfor %}
     </div>
 
     <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
@@ -39,6 +33,7 @@
         <span class="sr-only">Próximo</span>
     </a>
 </div>
+{% endif %}
 
 <div class="main-link-list">
     <div class="main-link">
