--- a/soldajustica/app/templates/app/layout.html
+++ b/soldajustica/app/templates/app/layout.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 <head>
     <meta charset="utf-8" />
@@ -31,7 +31,7 @@
                             <li><a href="{% url 'projects' %}">Projetos</a></li>
                             <li><a href="{% url 'get-involved' %}">Envolva-se</a></li>
                             <li><a href="{% url 'donate' %}">Doe</a></li>
-                            <li><a href="#">Ministérios</a></li>
+                            <li><a href="{% url 'ministries_list' %}">Ministérios</a></li>
                             <li><a href="{% url 'news_list' %}">Jornal do cristão</a></li>
                         </ul>
                     </div>
